// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionsEditor multiSelectNumeric snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      aria-label="select one or more options"
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="1"
      >
        One
      </option>
      <option
        value="2"
      >
        Two
      </option>
      <option
        value="3"
      >
        Three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor multiSelectObjects snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      aria-label="select one or more options"
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="one"
      >
        One
      </option>
      <option
        value="two"
      >
        Two
      </option>
      <option
        value="three"
      >
        Three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor multiSelectSimple snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      aria-label="select one or more options"
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="one"
      >
        one
      </option>
      <option
        value="two"
      >
        two
      </option>
      <option
        value="three"
      >
        three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor numeric snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      aria-label="select one option"
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="1"
      >
        One
      </option>
      <option
        value="2"
      >
        Two
      </option>
      <option
        value="3"
      >
        Three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor numericCheck snapshot 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-vurnku"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="One-1"
          name="One"
          type="checkbox"
          value="1"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="One-1"
        >
          One
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Two-2"
          name="Two"
          type="checkbox"
          value="2"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Two-2"
        >
          Two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Three-3"
          name="Three"
          type="checkbox"
          value="3"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Three-3"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor numericCheckInline snapshot 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-14k5yya-CheckboxesWrapper"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="One-1"
          name="One"
          type="checkbox"
          value="1"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="One-1"
        >
          One
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Two-2"
          name="Two"
          type="checkbox"
          value="2"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Two-2"
        >
          Two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Three-3"
          name="Three"
          type="checkbox"
          value="3"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Three-3"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor numericRadios snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="One-1"
        name="prop"
        type="radio"
        value="1"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="One-1"
      >
        One
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Two-2"
        name="prop"
        type="radio"
        value="2"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Two-2"
      >
        Two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Three-3"
        name="prop"
        type="radio"
        value="3"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Three-3"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor numericRadiosInline snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-3z2xr6-RadiosWrapper"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="One-1"
        name="prop"
        type="radio"
        value="1"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="One-1"
      >
        One
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Two-2"
        name="prop"
        type="radio"
        value="2"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Two-2"
      >
        Two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Three-3"
        name="prop"
        type="radio"
        value="3"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Three-3"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor objects snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      aria-label="select one option"
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="one"
      >
        One
      </option>
      <option
        value="two"
      >
        Two
      </option>
      <option
        value="three"
      >
        Three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor objectsCheck snapshot 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-vurnku"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="One-one"
          name="One"
          type="checkbox"
          value="one"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="One-one"
        >
          One
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Two-two"
          name="Two"
          type="checkbox"
          value="two"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Two-two"
        >
          Two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Three-three"
          name="Three"
          type="checkbox"
          value="three"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Three-three"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor objectsCheckInline snapshot 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-14k5yya-CheckboxesWrapper"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="One-one"
          name="One"
          type="checkbox"
          value="one"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="One-one"
        >
          One
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Two-two"
          name="Two"
          type="checkbox"
          value="two"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Two-two"
        >
          Two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Three-three"
          name="Three"
          type="checkbox"
          value="three"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Three-three"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor objectsRadios snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="One-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="One-one"
      >
        One
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Two-two"
      >
        Two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Three-three"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor objectsRadiosInline snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-3z2xr6-RadiosWrapper"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="One-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="One-one"
      >
        One
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Two-two"
      >
        Two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Three-three"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor overview snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      aria-label="select one option"
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="one"
      >
        one
      </option>
      <option
        value="two"
      >
        two
      </option>
      <option
        value="three"
      >
        three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor simpleCheck snapshot 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-vurnku"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="one-one"
          name="one"
          type="checkbox"
          value="one"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="one-one"
        >
          one
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="two-two"
          name="two"
          type="checkbox"
          value="two"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="two-two"
        >
          two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="three-three"
          name="three"
          type="checkbox"
          value="three"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="three-three"
        >
          three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor simpleCheckInline snapshot 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-14k5yya-CheckboxesWrapper"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="one-one"
          name="one"
          type="checkbox"
          value="one"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="one-one"
        >
          one
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="two-two"
          name="two"
          type="checkbox"
          value="two"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="two-two"
        >
          two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="three-three"
          name="three"
          type="checkbox"
          value="three"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="three-three"
        >
          three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor simpleRadios snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="one-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="one-one"
      >
        one
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="two-two"
      >
        two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="three-three"
      >
        three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor simpleRadiosInline snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-3z2xr6-RadiosWrapper"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="one-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="one-one"
      >
        one
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="two-two"
      >
        two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="three-three"
      >
        three
      </label>
    </div>
  </div>
</DocumentFragment>
`;
